# local-library

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  manage.py  pyproject.toml  requirements.txt
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_auto_20220920_1758.py  0003_auto_20220927_1018.py  0004_alter_bookinstance_options.py
catalog/static/css/: styles.css
catalog/templates/: base_generic.html  index.html
catalog/templates/catalog/: author_confirm_delete.html  author_detail.html  author_list.html  book_confirm_delete.html  book_detail.html  book_list.html  book_renew_librarian.html  bookinstance_list_borrowed_librarian.html  bookinstance_list_borrowed_user.html
catalog/tests/: test_forms.py  test_models.py  test_views.py
fixtures/: initialdata.json
locallibrary/: settings.py  urls.py
templates/registration/: login.html
